--- a/src/components/layout/header/styles.module.scss
+++ b/src/components/layout/header/styles.module.scss
@@ -5,6 +5,21 @@
   padding: 20px 15%;
   align-items: center;
   background-color: #fafafa;
+  z-index: 100;
+  position: relative;
+  box-shadow: 0 0px 15px #cccccc;
+
+  @media (max-width: 1750px) {
+    padding: 20px 10%;
+  }
+
+  @media (max-width: 1350px) {
+    padding: 20px 5%;
+  }
+
+  @media (max-width: 1150px) {
+    padding: 20px 2%;
+  }
 }
 
 .nav_container {
@@ -12,9 +27,17 @@
   gap: 30px;
 
   .nav_link {
-    font-size: 24px;
+    font-size: 36px;
     color: #494857;
     line-height: 36px;
+
+    @media (max-width: 1500px) {
+      font-size: 30px;
+    }
+
+    @media (max-width: 1150px) {
+      display: none;
+    }
   }
 }
 
@@ -23,9 +46,17 @@
   align-items: center;
   gap: 30px;
 
+  @media (max-width: 1150px) {
+    display: none;
+  }
+
   .phone_link {
     color: #58899f;
-    font-size: 36px;
+    font-size: 48px;
+
+    @media (max-width: 1500px) {
+      font-size: 40px;
+    }
   }
 }
 
