--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+:root {
+	--accent-color1: #ff9933;
+	--layer-color1: #e5eef2;
+	--layer-color2: #57889f;
+}
+
 html,
 body {
 	background: #f5f5f5;
