--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 	--accent-color1: #ff9933;
 	--layer-color1: #e5eef2;
 	--layer-color2: #57889f;
+	--footer-color: #494857;
 }
 
 html,
@@ -87,5 +88,54 @@ a {
 		padding-right: 3%;
 		margin-bottom: 60px;
 		margin-top: 40px;
+	}
+}
+
+.swiper {
+	width: 100%;
+	height: 100%;
+}
+
+.swiper-slide {
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+	color: var(--accent-color1) !important;
+	transition: all 0.3s ease;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+	color: var(--accent-color1);
+	transform: scale(1.1);
+}
+
+.swiper-pagination-bullet {
+	width: 12px;
+	height: 12px;
+	background: #9ca3af;
+	opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+	background: #3b82f6;
+	width: 30px;
+	border-radius: 6px;
+}
+
+/* Адаптивность */
+@media (max-width: 768px) {
+	.swiper-button-next,
+	.swiper-button-prev {
+		display: none;
+	}
+
+	.swiper-pagination {
+		bottom: 10px !important;
 	}
 }
