--- a/src/components/main-page/Footer/styles.module.scss
+++ b/src/components/main-page/Footer/styles.module.scss
@@ -14,16 +14,48 @@
 
 		&_box1 {
 			list-style: none;
+			li {
+				color: rgba(245, 245, 245, 1);
+				font-family: Roboto;
+				font-size: 18px;
+				font-weight: 700;
+				line-height: 21.6px;
+				padding-bottom: 20px;
+			}
 		}
 		&_box2 {
 			list-style: none;
 			display: flex;
 			flex-direction: column;
-			align-items: center;
+			margin: 0 auto;
+
+			li {
+				color: rgba(245, 245, 245, 1);
+				font-family: Roboto;
+				font-size: 16px;
+				font-weight: 400;
+				line-height: 23.6px;
+				&:nth-child(1) {
+					color: rgba(245, 245, 245, 1);
+					font-family: Roboto;
+					font-size: 18px;
+					font-weight: 700;
+					line-height: 21.6px;
+					padding-bottom: 10px;
+				}
+			}
 		}
 		&_box3 {
-			list-style: none;
-			text-align: right;
+			margin-left: auto;
+			li {
+				list-style: none;
+				color: rgba(245, 245, 245, 1);
+				font-family: Roboto;
+				font-size: 15px;
+				font-weight: 400;
+				line-height: 17.6px;
+				padding-bottom: 10px;
+			}
 		}
 	}
 	.footer_banner {
@@ -32,7 +64,8 @@
 		border: 16px solid var(--layer-color2);
 		box-shadow: 4px 4px 5px 0px rgba(204, 204, 204, 1);
 		border-radius: 50px;
-		width: 1200px;
+		width: 100%;
+		max-width: 1200px;
 		height: 587px;
 		background-color: var(--layer-color1);
 		position: absolute;
