--- a/src/components/main-page/Pluses/styles.module.scss
+++ b/src/components/main-page/Pluses/styles.module.scss
@@ -1,46 +1,84 @@
+.pluses {
+	@media (max-width: 1280) {
+		padding-bottom: 100px;
+	}
+	@media (max-width: 1024) {
+		padding-bottom: 150px;
+	}
+	@media (max-width: 768) {
+		padding-bottom: 200px;
+	}
+}
 .pluses_title {
-  text-align: center;
-  color: #494857;
-  font-size: 56px;
-  margin-bottom: 40px;
+	text-align: center;
+	color: #494857;
+	font-size: 56px;
+	margin-bottom: 40px;
 }
 
 .pluses_conatiner {
-  display: flex;
-  font-family: Roboto, sans-serif;
-  padding-left: 6%;
-  padding-right: 6%;
-  gap: 20px;
-  height: 500px;
+	display: flex;
+	font-family: Roboto, sans-serif;
+	padding-left: 6%;
+	padding-right: 6%;
+	gap: 20px;
+	height: 500px;
+	@media (max-width: 1280) {
+		flex-direction: column;
+		gap: 10px;
+		min-height: 500px;
+	}
 }
 
 .pluses_conatiner_left {
-  width: 25%;
-  position: relative;
-  height: 100%;
+	width: 30%;
+	position: relative;
+	height: 100%;
 
-  img {
-    position: absolute;
-    bottom: 0;
-    right: 20px;
-    height: 250px;
-    width: auto;
-  }
+	@media (max-width: 1600) {
+		width: 30%;
+	}
+	@media (max-width: 1280) {
+		width: 100%;
+	}
+	img {
+		position: absolute;
+		bottom: 0;
+		right: 20px;
+		height: 250px;
+		width: auto;
+		@media (max-width: 1800) {
+			height: 180px;
+		}
+		@media (max-width: 1280) {
+			height: 100px;
+		}
+	}
 }
 
 .pluses_conatiner_right {
-  display: flex;
-  flex-direction: column;
-  width: 75%;
-  gap: 20px;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	width: 75%;
+	gap: 20px;
+	height: 100%;
+	@media (max-width: 1280) {
+		width: 100%;
+		gap: 10px;
+	}
 }
 
 .pluses_conatiner_right_top,
 .pluses_conatiner_right_bottom {
-  display: flex;
-  gap: 20px;
-  height: 50%;
+	display: flex;
+	gap: 20px;
+	height: 100%;
+	@media (max-width: 1280) {
+		gap: 10px;
+	}
+	@media (max-width: 1024) {
+		flex-direction: column;
+	}
 }
 
 .pluses_conatiner_right_top__left,
@@ -48,17 +86,20 @@
 .pluses_conatiner_right_top__right,
 .pluses_conatiner_right_bottom__left,
 .pluses_conatiner_right_bottom__right {
-  color: #494857;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  background-color: #fafafa;
-  border: 1px solid #cccccc;
-  border-radius: 10px;
-  padding: 20px;
+	color: #494857;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	background-color: #fafafa;
+	border: 1px solid #cccccc;
+	border-radius: 10px;
+	padding: 20px;
 
-  span {
-    font-size: 20px;
-    font-weight: 600;
-  }
+	span {
+		font-size: 20px;
+		font-weight: 600;
+	}
+	@media (max-width: 1280) {
+		width: 100%;
+	}
 }
