--- a/src/components/main-page/Real-benefit/styles.module.scss
+++ b/src/components/main-page/Real-benefit/styles.module.scss
@@ -13,11 +13,17 @@
 		justify-items: center;
 		gap: 20px;
 		list-style: none;
+		@media (max-width: 1800px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 	.cart {
 		padding-top: 40px;
 		display: flex;
 		align-items: center;
+		@media (max-width: 768px) {
+			flex-direction: column;
+		}
 
 		&_img {
 			min-width: 25%;
@@ -30,6 +36,10 @@
 				font-family: Roboto;
 				font-size: 24px;
 				font-weight: 700;
+				@media (max-width: 768px) {
+					padding-right: 0;
+					text-align: center;
+				}
 			}
 			p {
 				padding-right: 100px;
@@ -38,6 +48,9 @@
 				font-size: 18px;
 				line-height: 21px;
 				font-weight: 400;
+				@media (max-width: 768px) {
+					padding-right: 0;
+				}
 			}
 		}
 	}
