--- a/src/components/main-page/Saved-data/styles.module.scss
+++ b/src/components/main-page/Saved-data/styles.module.scss
@@ -10,6 +10,9 @@
 			height: 100%;
 			clip-path: polygon(0 0, 75% 0, 100% 100%, 0 100%);
 			position: relative;
+			@media (max-width: 1600px) {
+				height: 450px;
+			}
 			img {
 				object-fit: cover;
 				width: 100%;
@@ -33,14 +36,37 @@
 			height: 100%;
 			clip-path: polygon(0 0, 100% 0, 100% 100%, 22% 100%);
 
+			@media (max-width: 1600px) {
+				top: 0;
+				left: 0;
+				width: 100%;
+				min-height: 100%;
+				clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+			}
+
 			&_inner {
 				padding: 51px 0 60px 280px;
+				@media (max-width: 1800px) {
+					padding-left: 250px;
+				}
+				@media (max-width: 1280px) {
+					padding-left: 50px;
+					padding-top: 20px;
+				}
 				h1 {
 					color: rgba(245, 245, 245, 1);
 					font-size: 56px;
 					font-weight: 400;
 					line-height: 56px;
 					letter-spacing: 0%;
+					@media (max-width: 1800px) {
+						font-size: 33px;
+						line-height: 33px;
+					}
+					@media (max-width: 1280px) {
+						font-size: 25px;
+						line-height: 25px;
+					}
 				}
 				p {
 					color: rgba(245, 245, 245, 1);
@@ -50,6 +76,14 @@
 					font-weight: 700;
 					line-height: 28.8px;
 					letter-spacing: 0px;
+					@media (max-width: 1800px) {
+						font-size: 18px;
+						padding: 18px 0;
+					}
+					@media (max-width: 1280px) {
+						font-size: 16px;
+						padding: 10px 0;
+					}
 				}
 				ul > li {
 					position: relative;
@@ -69,6 +103,13 @@
 						height: 25px;
 						top: 0;
 						left: 0;
+					}
+					@media (max-width: 1800px) {
+						font-size: 16px;
+					}
+					@media (max-width: 1280px) {
+						font-size: 14px;
+						padding: 0 0 16px 35px;
 					}
 				}
 				button {
@@ -96,6 +137,16 @@
 						transform: translateY(0);
 					}
 
+					@media (max-width: 1800px) {
+						margin-top: 40px;
+					}
+					@media (max-width: 1440px) {
+						margin-top: 10px;
+					}
+					@media (max-width: 1280px) {
+						padding: 10px 20px;
+						max-width: 200px;
+					}
 					@media (max-width: 768px) {
 						padding: 16px 40px;
 						font-size: 16px;
