--- a/src/components/main-page/Start/styles.module.scss
+++ b/src/components/main-page/Start/styles.module.scss
@@ -1,46 +1,53 @@
+.start {
+}
 .start_container {
-  display: flex;
-  flex-direction: row;
-  padding-left: 6%;
-  padding-right: 6%;
-  gap: 120px;
+	display: flex;
+	// padding-left: 6%;
+	// padding-right: 6%;
+	gap: 120px;
+	@media (max-width: 1600) {
+		gap: 20px;
+	}
+	@media (max-width: 1024) {
+		flex-direction: column;
+	}
 }
 
 .start_title {
-  text-align: center;
-  color: #494857;
-  font-size: 56px;
-  margin-bottom: 40px;
+	text-align: center;
+	color: #494857;
+	font-size: 56px;
+	margin-bottom: 40px;
 }
 
 .start_item {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 30px;
-  align-items: center;
-  text-align: center;
-  background-color: #fafafa;
-  border: 8px solid #cccccc;
-  font-family: Roboto, sans-serif;
-  justify-content: space-around;
-  flex: 1;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	padding: 30px;
+	align-items: center;
+	text-align: center;
+	background-color: #fafafa;
+	border: 8px solid #cccccc;
+	font-family: Roboto, sans-serif;
+	justify-content: space-around;
+	flex: 1;
 
-  span {
-    font-size: 20px;
-    font-weight: 600;
-    color: #494857;
-  }
+	span {
+		font-size: 20px;
+		font-weight: 600;
+		color: #494857;
+	}
 
-  p {
-    font-size: 16px;
-    font-weight: 400;
-    color: #494857;
-  }
+	p {
+		font-size: 16px;
+		font-weight: 400;
+		color: #494857;
+	}
 
-  img {
-    margin-top: 20px;
-    width: 50%;
-    height: auto;
-  }
+	img {
+		margin-top: 20px;
+		width: 50%;
+		height: auto;
+	}
 }
