--- a/src/components/main-page/Under-hero/styles.module.scss
+++ b/src/components/main-page/Under-hero/styles.module.scss
@@ -1,27 +1,38 @@
 .underhero_container {
-  display: flex;
-  padding-top: 50px;
+	display: flex;
+	padding-top: 50px;
+
+	@media (max-width: 1024) {
+		flex-direction: column;
+	}
+
+	// @media (max-width: 1450px) {
+
+	// }
 }
 
 .underhero_item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	gap: 10px;
 
-  span,
-  p {
-    font-family: Roboto, sans-serif;
-    color: #494857;
-  }
+	span,
+	p {
+		font-family: Roboto, sans-serif;
+		color: #494857;
+	}
 
-  span {
-    font-size: 24px;
-  }
+	span {
+		font-size: 24px;
+	}
 
-  p {
-    font-size: 16px;
-    max-width: 70%;
-  }
+	p {
+		font-size: 16px;
+		max-width: 70%;
+	}
+	@media (max-width: 1024) {
+		padding-bottom: 20px;
+	}
 }
